--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "devDependencies": {
     "gulp": "^3.8.10",
     "gulp-concat": "^2.4.3",
+    "gulp-connect": "^2.2.0",
     "gulp-minify-css": "^0.3.11",
     "gulp-notify": "^2.1.0",
     "gulp-ruby-sass": "^0.7.1",
+    "gulp-server-livereload": "^1.0.2",
     "gulp-uglify": "^1.0.2",
     "gulp-util": "^3.0.2",
     "gulp-watch": "^3.0.0"
